# xmanbrowser

./: .gitignore  .review-claude-cli-20260625.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  sidecar_main.py
.claude/skills/release-xmanbrowser/: SKILL.md
.github/workflows/: ci.yml  desktop-build.yml
docs/superpowers/plans/: 2026-07-14-v1.3.4-stability.md
docs/superpowers/specs/: 2026-07-14-v1.3.4-stability-design.md
tests/: conftest.py  test_engine_install.py  test_runner_health.py  test_security.py  test_store.py  test_unit.py
tools/: assemble_release.sh  build_sidecar.sh  capture_browserleaks.py  patch_playwright_pageerror.py  release_macos.sh  sign_macos.sh  socks5_via_http.py  verify_stability.py  verify_updater_archive.py
ui/: .gitignore  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  api.ts  i18n.ts  styles.css
ui/src-tauri/: Cargo.toml  Info.plist  installer-hooks.nsh  tauri.conf.json
ui/src-tauri/capabilities/: default.json
ui/src-tauri/icons/: icon.icns
ui/src-tauri/src/: lib.rs
ui/tests/: layout-contract.test.mjs
xman/: __init__.py  cli.py  engine.py  fingerprint.py  launcher.py  manager.py  profile.py  proxy.py  proxy_providers.py  runner.py  service.py  store.py
