[project]
name = "xman-browser"
version = "0.1.0"
description = "XMan — free & open-source macOS fingerprint browser (Camoufox-based, MIT)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10,<3.14"
dependencies = [
    "camoufox[geoip]==0.4.11",
    "typer>=0.12",
    "rich>=13",
    "httpx>=0.27",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "patchright>=1.40",
]

[project.scripts]
xman = "xman.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["xman"]
